# Copyright 2021 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may not
# use this file except in compliance with the License. You may obtain a copy of
# the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
# WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
# License for the specific language governing permissions and limitations under
# the License.

import("//build_overrides/pigweed.gni")
import("$dir_pw_build/target_types.gni")
import("$dir_pw_unit_test/test.gni")

pw_source_set("bcc") {
  sources = [ "bcc.c" ]
  deps = [
    "//:cbor_reader",
    "//:cbor_writer",
  ]
}

pw_test("bcc_test") {
  sources = [
    "bcc_test.cc",
  ]
  deps = [
    ":bcc",
    "//:dice_with_cbor_cert",
  ]
}

pw_executable("bcc_fuzzer") {
  sources = [
    "bcc_fuzzer.cc",
  ]
  deps = [
    ":bcc",
    "//:dice_with_boringssl_ops",
  ]
}
